# hn-analytical-platform

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  requirementst.txt
infrastructure/docker/: .env.example  Dockerfile  Dockerfile.airflow  Dockerfile.dev  docker-compose.yml
infrastructure/orchestration/dags/: dag.py
infrastructure/terraform/: main.tf  output.tf  variables.tf
src/analytics/: hn_analytics.py  main.py
src/ingestion/: hn_client.py  hn_fetcher.py  hn_ingestor.py  main.py  story_tracker.py
src/processing/: hn_processor.py  main.py
src/quality/: checks.py  runner.py
src/transformation/: hn_transformer.py  main.py
src/utils/: layer_storage_loader.py  layer_storage_writer.py  logger.py
tests/ingestion/: test_hn_client.py  test_hn_fetcher.py  test_hn_ingestor.py  test_story_tracker.py
tests/processing/: test_hn_processor.py
tests/quality/: test_checks.py  test_runner.py
tests/transformation/: test_hn_transformer.py
